--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-    <script src="script.js"></script>
+    <script src="session.js"></script>
   </head>
   <body>
     <header>
@@ -29,6 +29,9 @@
       </div>
       <div class="profile">
         <img src="./assets/./profileLogo.png" alt="netflix profile logo" />
+        <div class="dropdown">
+          <span onclick="logOut()">Sign out</span>
+        </div>
       </div>
     </header>
     <main>
@@ -126,5 +129,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
